welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: type mismatch;
 found   : Int
 required: java.awt.Color
  droite();val decal = litMessage().toInt;coupstylo((0+decal)%T.length)
                                                             ^Array2:17: error: type mismatch;
 found   : Int
 required: java.awt.Color
   {avance();coupstylo((j+decal)%T.length)
                                ^